fixed manage orders pages to make readable

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -104,12 +104,13 @@
   align-items: center;
 }
 // Stock entry layout
-.stock-list {
+.stock-list  {
   display: flex;
   flex-direction: column;
   max-height: $stockListHeight;
   overflow-y: auto;
 }
+
 .stock-entry {
   width: $stockContainerWidth;
   display: flex;
@@ -148,11 +149,52 @@
   align-self: center;
 }
 
+// 
+// Manage oRders
 
+.orders-choose_user {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+
+.orders-single_entry {
+  display: block;
+}
+
+
+.clear-user-agent-styles table,
+.clear-user-agent-styles thead,
+.clear-user-agent-styles tbody,
+.clear-user-agent-styles tfoot,
+.clear-user-agent-styles tr,
+.clear-user-agent-styles th,
+.clear-user-agent-styles td {
+    display: block;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    border: none;
+    border-collapse: inherit;
+    border-spacing: 0;
+    border-color: inherit;
+    vertical-align: inherit;
+    text-align: left;
+    font-weight: inherit;
+    -webkit-border-horizontal-spacing: 0;
+    -webkit-border-vertical-spacing: 0;
+}
+.clear-user-agent-styles th, 
+.clear-user-agent-styles td {
+  display: inline;
+}
 
 //Buttons
 
-button.btn-primary {
+button.btn-primary, 
+form.btn-primary button {
   border: 1px solid $textColor;
   border-radius: 5px;
   padding: .2rem;
